# codex-media-advertising

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
plugins/codex-media-advertising/: pyproject.toml
plugins/codex-media-advertising/.codex-plugin/: plugin.json
plugins/codex-media-advertising/dependencies/: speech.lock.json
plugins/codex-media-advertising/docs/: authentication.md  automations.md  installation.md  platform-notes.md
plugins/codex-media-advertising/examples/: brand.example.json  campaign.example.json  schedule.example.json
plugins/codex-media-advertising/scripts/: build_release.py  install.sh  install_speech.py  scan_release.py  uninstall.sh
plugins/codex-media-advertising/skills/media-automation/: SKILL.md
plugins/codex-media-advertising/skills/media-campaign/: SKILL.md
plugins/codex-media-advertising/skills/media-onboarding/: SKILL.md
plugins/codex-media-advertising/skills/media-operations/: SKILL.md
plugins/codex-media-advertising/skills/media-publishing/: SKILL.md
plugins/codex-media-advertising/src/codex_media_ads/: __init__.py  cli.py  config.py  manifests.py  models.py  optimization.py  orchestrator.py  (+2 more)
plugins/codex-media-advertising/tests/: test_api_adapters.py  test_browser_adapters.py  test_chrome_runtime.py  test_cli.py  test_creative.py  test_end_to_end.py  test_launchd.py  test_manifests.py  test_optimization.py  test_orchestrator.py  test_publisher_router.py  test_publishing_base.py  test_queueing.py  test_release_tools.py  test_scaffold.py  test_setup.py  test_skills.py  test_speech_install.py
(+31 files in other folders)
